service/tests/models/products/snapshots/product_fetch/can_find_products_by_search@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            ProductListItem {
                pid: PID,
                name: "Full-grain Leather Belt",
                description: Some(
                    "A vegetable-tanned leather belt finished with a brushed metal buckle.",
                ),
                information: {
                    "Hardware": "Brushed steel",
                    "Material": "Full-grain leather",
                    "Width": "32 mm",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "accessories",
                    slug: "accessories",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1624222247344-550fb60583dc?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "BELT-BRN-M",
                        price: 44.99,
                        stock_quantity: 15,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 15,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Court Leather Sneakers",
                description: Some(
                    "Low-profile leather sneakers with cushioned insoles.",
                ),
                information: {
                    "Care": "Wipe clean",
                    "Material": "Leather",
                    "Sole": "Rubber",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SNEAKER-WHT-42",
                        price: 89.99,
                        stock_quantity: 9,
                    },
                ),
                variant_count: 2,
                option_count: 2,
                total_stock: 16,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 20,
            total_items: 2,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
