service/tests/models/products/snapshots/product_fetch/can_find_products_with_default_pagination@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            ProductListItem {
                pid: PID,
                name: "Pleated Wide-leg Trousers",
                description: Some(
                    "Fluid wide-leg trousers with front pleats and a clean tailored waistband.",
                ),
                information: {
                    "Fit": "Wide leg",
                    "Material": "Tencel blend",
                    "Rise": "High rise",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "trousers",
                    slug: "trousers",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "PLEAT-BLK-M",
                        price: 64.99,
                        stock_quantity: 23,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 23,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Mesh Running Trainers",
                description: Some(
                    "Lightweight trainers with a breathable mesh upper and responsive foam sole.",
                ),
                information: {
                    "Care": "Hand wash",
                    "Sole": "Cushioned foam",
                    "Upper": "Recycled mesh",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1552346154-21d32810aba3?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "RUNNER-GRY-42",
                        price: 109.99,
                        stock_quantity: 11,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 11,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Brushed Wool Scarf",
                description: Some(
                    "A warm, softly brushed wool scarf with subtle fringed ends.",
                ),
                information: {
                    "Care": "Dry clean only",
                    "Dimensions": "180 × 30 cm",
                    "Material": "Lambswool",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "accessories",
                    slug: "accessories",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1520903920243-00d872a2d1c9?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SCARF-GRY-OS",
                        price: 39.99,
                        stock_quantity: 0,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 0,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Full-grain Leather Belt",
                description: Some(
                    "A vegetable-tanned leather belt finished with a brushed metal buckle.",
                ),
                information: {
                    "Hardware": "Brushed steel",
                    "Material": "Full-grain leather",
                    "Width": "32 mm",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "accessories",
                    slug: "accessories",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1624222247344-550fb60583dc?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "BELT-BRN-M",
                        price: 44.99,
                        stock_quantity: 15,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 15,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Everyday Canvas Tote",
                description: Some(
                    "A roomy heavyweight canvas tote with reinforced handles and an inner pocket.",
                ),
                information: {
                    "Capacity": "18 litres",
                    "Care": "Spot clean",
                    "Material": "Cotton canvas",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "accessories",
                    slug: "accessories",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1594223274512-ad4803739b7c?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "TOTE-NAT-OS",
                        price: 34.99,
                        stock_quantity: 46,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 46,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Oxford Button-down Shirt",
                description: Some(
                    "A crisp cotton Oxford shirt cut for comfortable everyday layering.",
                ),
                information: {
                    "Collar": "Button-down",
                    "Fit": "Tailored",
                    "Material": "Oxford cotton",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shirts",
                    slug: "shirts",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1596755094514-f87e34085b2c?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "OXFORD-BLU-L",
                        price: 59.99,
                        stock_quantity: 4,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 4,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Washed Linen Shirt",
                description: Some(
                    "A breathable linen shirt with a soft washed finish and easy shape.",
                ),
                information: {
                    "Care": "Machine wash gentle",
                    "Fit": "Regular",
                    "Material": "100% linen",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shirts",
                    slug: "shirts",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1603252109303-2751441dd157?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "LINEN-SAND-M",
                        price: 69.99,
                        stock_quantity: 28,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 28,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Court Leather Sneakers",
                description: Some(
                    "Low-profile leather sneakers with cushioned insoles.",
                ),
                information: {
                    "Care": "Wipe clean",
                    "Material": "Leather",
                    "Sole": "Rubber",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SNEAKER-WHT-42",
                        price: 89.99,
                        stock_quantity: 9,
                    },
                ),
                variant_count: 2,
                option_count: 2,
                total_stock: 16,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Tailored Chino Trousers",
                description: Some(
                    "Mid-weight chinos with a tapered leg and stretch waistband.",
                ),
                information: {
                    "Care": "Machine wash cold",
                    "Fit": "Tapered",
                    "Material": "Cotton blend",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "trousers",
                    slug: "trousers",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "CHINO-BLK-M",
                        price: 54.99,
                        stock_quantity: 21,
                    },
                ),
                variant_count: 2,
                option_count: 2,
                total_stock: 33,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                name: "Classic Cotton T-shirt",
                description: Some(
                    "Soft everyday cotton t-shirt with a relaxed fit.",
                ),
                information: {
                    "Care": "Machine wash cold",
                    "Fit": "Relaxed",
                    "Material": "100% cotton",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "t-shirts",
                    slug: "t-shirts",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "TSHIRT-BLK-M",
                        price: 24.99,
                        stock_quantity: 32,
                    },
                ),
                variant_count: 2,
                option_count: 2,
                total_stock: 50,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 20,
            total_items: 10,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
