service/tests/models/products/snapshots/product_fetch/can_include_deleted_products@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: "(without_deleted, with_deleted)"
---
(
    Ok(
        PaginatedModel {
            data: [
                ProductListItem {
                    pid: PID,
                    name: "Court Leather Sneakers",
                    description: Some(
                        "Low-profile leather sneakers with cushioned insoles.",
                    ),
                    information: {
                        "Care": "Wipe clean",
                        "Material": "Leather",
                        "Sole": "Rubber",
                    },
                    category: ProductCategorySummary {
                        id: ID,
                        pid: PID,
                        name: "shoes",
                        slug: "shoes",
                    },
                    primary_image: Some(
                        "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                    ),
                    default_variant: Some(
                        ProductVariantSummary {
                            pid: PID,
                            sku: "SNEAKER-WHT-42",
                            price: 89.99,
                            stock_quantity: 9,
                        },
                    ),
                    variant_count: 2,
                    option_count: 2,
                    total_stock: 16,
                    created_at: DATE,
                    updated_at: DATE,
                    deleted_at: None,
                },
                ProductListItem {
                    pid: PID,
                    name: "Classic Cotton T-shirt",
                    description: Some(
                        "Soft everyday cotton t-shirt with a relaxed fit.",
                    ),
                    information: {
                        "Care": "Machine wash cold",
                        "Fit": "Relaxed",
                        "Material": "100% cotton",
                    },
                    category: ProductCategorySummary {
                        id: ID,
                        pid: PID,
                        name: "t-shirts",
                        slug: "t-shirts",
                    },
                    primary_image: Some(
                        "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                    ),
                    default_variant: Some(
                        ProductVariantSummary {
                            pid: PID,
                            sku: "TSHIRT-BLK-M",
                            price: 24.99,
                            stock_quantity: 32,
                        },
                    ),
                    variant_count: 2,
                    option_count: 2,
                    total_stock: 50,
                    created_at: DATE,
                    updated_at: DATE,
                    deleted_at: None,
                },
            ],
            pagination: Pagination {
                page: 1,
                limit: 20,
                total_items: 2,
                total_pages: 1,
                has_next: false,
                has_prev: false,
            },
        },
    ),
    Ok(
        PaginatedModel {
            data: [
                ProductListItem {
                    pid: PID,
                    name: "Court Leather Sneakers",
                    description: Some(
                        "Low-profile leather sneakers with cushioned insoles.",
                    ),
                    information: {
                        "Care": "Wipe clean",
                        "Material": "Leather",
                        "Sole": "Rubber",
                    },
                    category: ProductCategorySummary {
                        id: ID,
                        pid: PID,
                        name: "shoes",
                        slug: "shoes",
                    },
                    primary_image: Some(
                        "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                    ),
                    default_variant: Some(
                        ProductVariantSummary {
                            pid: PID,
                            sku: "SNEAKER-WHT-42",
                            price: 89.99,
                            stock_quantity: 9,
                        },
                    ),
                    variant_count: 2,
                    option_count: 2,
                    total_stock: 16,
                    created_at: DATE,
                    updated_at: DATE,
                    deleted_at: None,
                },
                ProductListItem {
                    pid: PID,
                    name: "Tailored Chino Trousers",
                    description: Some(
                        "Mid-weight chinos with a tapered leg and stretch waistband.",
                    ),
                    information: {
                        "Care": "Machine wash cold",
                        "Fit": "Tapered",
                        "Material": "Cotton blend",
                    },
                    category: ProductCategorySummary {
                        id: ID,
                        pid: PID,
                        name: "trousers",
                        slug: "trousers",
                    },
                    primary_image: Some(
                        "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
                    ),
                    default_variant: Some(
                        ProductVariantSummary {
                            pid: PID,
                            sku: "CHINO-BLK-M",
                            price: 54.99,
                            stock_quantity: 21,
                        },
                    ),
                    variant_count: 2,
                    option_count: 2,
                    total_stock: 33,
                    created_at: DATE,
                    updated_at: DATE,
                    deleted_at: Some(
                        DATE,
                    ),
                },
                ProductListItem {
                    pid: PID,
                    name: "Classic Cotton T-shirt",
                    description: Some(
                        "Soft everyday cotton t-shirt with a relaxed fit.",
                    ),
                    information: {
                        "Care": "Machine wash cold",
                        "Fit": "Relaxed",
                        "Material": "100% cotton",
                    },
                    category: ProductCategorySummary {
                        id: ID,
                        pid: PID,
                        name: "t-shirts",
                        slug: "t-shirts",
                    },
                    primary_image: Some(
                        "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                    ),
                    default_variant: Some(
                        ProductVariantSummary {
                            pid: PID,
                            sku: "TSHIRT-BLK-M",
                            price: 24.99,
                            stock_quantity: 32,
                        },
                    ),
                    variant_count: 2,
                    option_count: 2,
                    total_stock: 50,
                    created_at: DATE,
                    updated_at: DATE,
                    deleted_at: None,
                },
            ],
            pagination: Pagination {
                page: 1,
                limit: 20,
                total_items: 3,
                total_pages: 1,
                has_next: false,
                has_prev: false,
            },
        },
    ),
)
