service/tests/models/products/snapshots/product_fetch/cannot_find_product_detail_when_slug_does_not_exist@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Err(
    EntityNotFound,
)
