service/tests/models/products/snapshots/product_fetch/keeps_product_slug_stable_when_name_changes@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: "(before.slug(), after.slug(), after.name())"
---
(
    "classic-cotton-t-shirt",
    "classic-cotton-t-shirt",
    "Renamed Cotton T-shirt",
)
